# mappingpylib

./: .gitignore  README.md  build_dev.sh  pyproject.toml  run_tests.sh
.github/workflows/: python-app.yml
src/mappingpylib/: abstractcfg.py  apiconnector.py  dbconnector.py  dragoniteapi.py  dragonitedb.py  functionscheduler.py  golbatdb.py  helper.py  loggercfg.py  msgidcache.py  pogotranslation.py  rotomapi.py  simpletelegramapi.py
tests/: misc.py  test_dbconnector.py  test_helper.py  test_loggercfg.py  test_msgidcache.py  test_pogotranslation.py  test_simpletelegramapi.py
