[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mappingpylib"
version = "0.0.3"
authors = [
  { name="hamster007Github", email="author@example.com" },
]
description = "Python library for supporting pogo mapping projects"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "wheel",
    "mysql-connector-python>=8.1.0",
    "requests",
    "tomli >= 1.1.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "ruff",
    "pretend",
]

[project.urls]
Homepage = "https://github.com/hamster007Github/mappingpylib"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mappingpylib"]

[tool.coverage.run]
#branch = true
#parallel = true
source = ['mappingpylib']

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    #"raise AssertionError",
    #"raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    #"if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    ]
ignore_errors = true
